--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ href="https://fonts.googleapis.com/css?family=Rubik&display=swap"
           <img src="https://fontmeme.com/permalink/200418/19c8a1bf314e64a4f87f54b39ee30965.png" alt="pokemon-font" class="headerImg" />
         </header>    
         <nav class="navbar">
-		          <div class="hamburger">&#9776;</div>
+		          <div class="hamburger fa-lg">&#9776;</div>
 		          <ul class="menu">
 			          <li>Pokemons</li>
 			          <li>Battles</li>
@@ -81,9 +81,9 @@ href="https://fonts.googleapis.com/css?family=Rubik&display=swap"
         </div>
         <footer>
           <ul class="social">
-			      <li class="social_icon"><i class="fab fa-twitter"></i></li>
-			      <li class="social_icon"><i class="fab fa-facebook"></i></li>
-			      <li class="social_icon"><i class="fab fa-instagram"></i></li>
+			      <li class="social_icon"><i class="fab fa-twitter fa-lg"></i></li>
+			      <li class="social_icon"><i class="fab fa-facebook fa-lg"></i></li>
+			      <li class="social_icon"><i class="fab fa-instagram fa-lg"></i></li>
 		      </ul>
         </footer>  
     </body>
